# go-backend-auth/docs/swagger.yaml
@@ -39,6 +39,13 @@ definitions:
     - polres
     - polsek
     type: string
+    x-enum-comments:
+      RoleView: Default untuk user baru (pengganti pending)
+    x-enum-descriptions:
+    - ""
+    - Default untuk user baru (pengganti pending)
+    - ""
+    - ""
     x-enum-varnames:
     - RoleAdmin
     - RoleView
@@ -49,11 +56,10 @@ info:
   contact:
     email: admin@polri.go.id
     name: Tim IT Support
-  description: API Service untuk Manajemen User (Login NRP), Validasi Akun, dan Pelaporan
-    Data Kepolisian.
+  description: API Service untuk Manajemen User (Login NRP) dan Pelaporan Data Kepolisian.
   termsOfService: http://swagger.io/terms/
   title: Backend API Polres & Polsek (Sistem NRP)
-  version: "1.1"
+  version: "1.2"
 paths:
   /admin/users:
     get:
@@ -76,7 +82,7 @@ paths:
     post:
       consumes:
       - application/json
-      description: Membuat user baru dengan NRP dan Role tertentu (Langsung Active)
+      description: Membuat user baru dengan NRP dan Role tertentu
       parameters:
       - description: Data User Baru
         in: body
@@ -148,7 +154,8 @@ paths:
     put:
       consumes:
       - application/json
-      description: Mengupdate Nama, Jabatan, atau Role user
+      description: Mengupdate Nama, Jabatan, atau Role user. Gunakan ini untuk mengubah
+        role dari 'view' ke 'polsek/polres'.
       parameters:
       - description: User ID
         in: path
@@ -171,31 +178,7 @@ paths:
             type: object
       security:
       - BearerAuth: []
-      summary: Edit Data User
-      tags:
-      - admin-users
-  /admin/users/{id}/approve:
-    put:
-      consumes:
-      - application/json
-      description: Mengubah status user dari pending menjadi active
-      parameters:
-      - description: User ID
-        in: path
-        name: id
-        required: true
-        type: integer
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            additionalProperties: true
-            type: object
-      security:
-      - BearerAuth: []
-      summary: Setujui User (Validasi Akun)
+      summary: Edit Data User (Termasuk Upgrade Role)
       tags:
       - admin-users
 securityDefinitions:
